--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -17,6 +17,10 @@
 	box-shadow: 2px 2px 2px 0.5px white;
 }
 
+body {
+    background: black;
+}
+
 logged-user {
     text-transform: uppercase;
 }
