--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,13 +10,33 @@
 
 <body>
 <header layout:fragment="menu-navbar">
-    <nav class="pink darken-1">
-        <div class="nav-wrapper"></div>
+    <nav>
+        <div class="nav-wrapper purple lighten-3">
+            <a class="brand-logo center"><img class="materialboxed" width="140" th:src="@{/img/homeflix.png}"></a>
+            <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li><a href="sass.html">Sass</a></li>
+                <li><a href="badges.html">Components</a></li>
+                <li><a href="collapsible.html">JavaScript</a></li>
+            </ul>
+        </div>
     </nav>
 </header>
 <section layout:fragment="body">
     <div>
-        <img class="materialboxed" width="650" th:src="@{/img/cat.jpg}">
+        <div class="container">
+            <div class="row">
+                <div class="col s12">
+                    <h4>Player de Vídeo</h4>
+                    <div class="video-container">
+                        <video class="responsive-video" controls>
+                            <source th:src="@{/api/video/meu_video}" type="video/mp4">
+                            Seu navegador não suporta o elemento de vídeo.
+                        </video>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </section>
 </body>
