--- a/src/main/resources/templates/films/films.html
+++ b/src/main/resources/templates/films/films.html
@@ -23,18 +23,18 @@
 </header>
 <section layout:fragment="body">
     <div class="container">
+        <!-- Lista de Séries -->
         <div class="row">
             <div class="col s12">
-                <h2><a th:href="@{/films}">Filmes</a></h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <h2><a th:href="@{/series}">Séries</a></h2>
+                <h2>Filmes</h2>
+                <ul class="collection">
+                    <li th:each="film : ${films}" class="collection-item">
+                        <a th:href="@{'/player/films?videoName=' + ${film}}" th:text="${film}"></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
-
 
 </section>
 </body>
